[package]
name = "solr-token-swap"
version = "1.0.0"
edition = "2018"
description = "SolRazr Token Swap Program"
repository = "https://github.com/solrazr-app/solr-token-swap"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.6"
thiserror = "1.0.21"
spl-token = {version = "3.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
solr-token-whitelist = {version = "1.0.2", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]
